--- a/src/com/fila/MusicaComponent.form
+++ b/src/com/fila/MusicaComponent.form
@@ -31,7 +31,6 @@
   <SubComponents>
     <Container class="javax.swing.JPanel" name="jPanel2">
       <Properties>
-        <Property name="opaque" type="boolean" value="false"/>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[113, 20]"/>
         </Property>
@@ -46,6 +45,9 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabelNome">
           <Properties>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ad" green="ad" id="Panel.foreground" palette="3" red="ad" type="palette"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Musica"/>
           </Properties>
           <Constraints>
@@ -56,6 +58,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelTempo">
           <Properties>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ad" green="ad" id="Panel.foreground" palette="3" red="ad" type="palette"/>
+            </Property>
             <Property name="horizontalAlignment" type="int" value="4"/>
             <Property name="text" type="java.lang.String" value="00:00:00"/>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
@@ -71,9 +76,6 @@
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="jPanel1">
-      <Properties>
-        <Property name="opaque" type="boolean" value="false"/>
-      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
           <BorderConstraints direction="Center"/>
@@ -86,6 +88,9 @@
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Ubuntu" size="12" style="0"/>
+            </Property>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ad" green="ad" id="Panel.foreground" palette="3" red="ad" type="palette"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Artista"/>
             <Property name="verticalAlignment" type="int" value="1"/>
